# ChangeLog for net-news/slrnconf
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-news/slrnconf/Attic/ChangeLog,v 1.2 2004/07/05 16:42:10 dholm Exp $

  05 Jul 2004; David Holm <dholm@gentoo.org> slrnconf-0.8.4.ebuild:
  Added to ~ppc.

*slrnconf-0.8.4 (05 Jul 2004)

  05 Jul 2004; Sven Wegener <swegener@gentoo.org> +metadata.xml,
  +slrnconf-0.8.4.ebuild:
  Initial import, ebuild submitted by tove <bugs@veller.net> in bug #56039.
