@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-news/slrnconf/Attic/slrnconf-0.8.4.ebuild,v 1.2 2004/07/05 16:42:10 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/slrnconf/Attic/slrnconf-0.8.4.ebuild,v 1.3 2004/08/05 22:44:15 swegener Exp $
 
 DESCRIPTION="slrnconf is a graphical configuation utility for the newsreader slrn"
 HOMEPAGE="http://home.arcor.de/kaffeetisch/slrnconf.html"
@@ -8,13 +8,14 @@ SRC_URI="http://home.arcor.de/kaffeetisch/downloads/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~ppc"
+KEYWORDS="x86 ~ppc"
 IUSE=""
 
-DEPEND="net-news/slrn
-	dev-lang/perl
+RDEPEND="dev-lang/perl
 	dev-perl/gtk2-perl
 	dev-perl/Parse-RecDescent
+	net-news/slrn"
+DEPEND="${RDEPEND}
 	>=sys-apps/sed-4"
 
 src_unpack() {
