@@ -1,6 +1,9 @@
 # ChangeLog for net-news/slrnconf
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-news/slrnconf/Attic/ChangeLog,v 1.2 2004/07/05 16:42:10 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/slrnconf/Attic/ChangeLog,v 1.3 2004/08/05 22:44:15 swegener Exp $
+
+  06 Aug 2004; Sven Wegener <swegener@gentoo.org> slrnconf-0.8.4.ebuild:
+  Updated dependencie and marked stable on x86.
 
   05 Jul 2004; David Holm <dholm@gentoo.org> slrnconf-0.8.4.ebuild:
   Added to ~ppc.
